syntax = "proto3";

package protobuf.types;

message TransactionId{
    string transaction_id = 1;
}

message UUID{
    string uuid = 1;
}

enum Cause{
    UNKNOWN = 0;
}

message Data{
    string data = 1;
}
